@@ -1,3 +1,4 @@
+from django.conf import settings
 from django.contrib import admin
 from raptiye.comments.models import Comments
 
@@ -7,7 +8,7 @@ class CommentsAdmin(admin.ModelAdmin):
 	list_display = ("get_entry_name", "get_author_info", "get_datetime", "published", "notification",)
 	list_filter = ("published",)
 	list_per_page = settings.ADMIN_LIST_PER_PAGE
-	ordering = ("-datetime")
+	ordering = ("-datetime",)
 	search_fields = ("entry__title", "author__username", "content")
 
 admin.site.register(Comments, CommentsAdmin)
